# CFD-Eigen-Solver

./: .gitignore  CMakeLists.txt  Co-Located SIMPLE.md  EnergyEqn.cpp  EnergyEqn.h  Field.h  Inputs.cpp  Inputs.h  MatrixCoeff.cpp  MatrixCoeff.h  MatrixInterface.cpp  MatrixInterface.h  MatrixWrapper.h  Mesh.cpp  Mesh.h  Output.h  PWIM.cpp  PWIM.h  README.md  TheoryNotes.md  TransportEqn.cpp  TransportEqn.h  XMomentumEqn.cpp  XMomentumEqn.h  YMomentumEqn.cpp  YMomentumEqn.h  config.json  install.eigen.sh  main.cpp  u.csv  v.csv
docs/: plot_notes.md
ref.data/: u.@.y.Re1000.csv  u.@.y.txt
script/: plot.py  plot.u@.y.py
version.1.1DDiffusion_POP/: CMakeLists.txt  Inputs.cpp  main.cpp
version.2.1DDiffusion_OOP/: CMakeLists.txt  Inputs.h  MatrixCoeff.h  Mesh.h  main.cpp
version.3.1DDiffusion-Convection/: CMakeLists.txt  MatrixCoeff.h  Mesh.h
version.4.1DDiffusion-Convection-Upwind/: CMakeLists.txt  Inputs.h  MatrixCoeff.h
version.5.1DDiffusion-Neumann-Boundary/: CMakeLists.txt  Inputs.cpp  Inputs.h  MatrixCoeff.h  Mesh.h  config.json
